--- a/public/createpost.html
+++ b/public/createpost.html
@@ -9,10 +9,10 @@
     <title>DD Tech Blog</title>
 
 <nav class="navbar" role="navigation" aria-label="main navigation">
-  {{!-- <div class="navbar-brand">
-    <a class="navbar-item" href="https://bulma.io">
+ <div class="navbar-brand">
+    <!-- <a class="navbar-item" href="https://bulma.io">
       <img src="https://bulma.io/images/bulma-logo.png" width="112" height="28">
-    </a> --}}
+    </a> -->
 
     <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
       <span aria-hidden="true"></span>
@@ -65,19 +65,57 @@
 </head>
 
 <body>
-
-    <!--HERO IMAGE FOR HEADER-->
-    <section class="hero is-info">
-        <div class="hero-body is-horizontal-center">
-            <p class="title">
-                <a href="/homepage"><img src="./images/techlogo.png"></a>
-            </p>
+<!-- THIS IS WHERE  TO POST BLOG AND COMMENT DASHBOARD-->
+      <div class="field is-horizontal m-6" id="blogTitle">
+        <div class="field-label is-normal">
+          <label class="label">Blog Title</label>
         </div>
-    </section>
+        <div class="field-body">
+          <div class="field">
+            <div class="control">
+              <input class="input is-danger" type="text" placeholder="title of blog">
+            </div>
+            <p class="help is-danger">
+              This field is required
+            </p>
+          </div>
+        </div>
+      </div>
+      
+      <div class="field is-horizontal m-6" id="blogComment">
+        <div class="field-label is-normal">
+          <label class="label">Comment</label>
+        </div>
+        <div class="field-body">
+          <div class="field">
+            <div class="control">
+              <textarea class="textarea" placeholder="Make a comment"></textarea>
+            </div>
+          </div>
+        </div>
+      </div>
+      
+      <div class="field is-horizontal">
+        <div class="field-label">
+          <!-- Left empty for spacing -->
+        </div>
+        <div class="field-body">
+          <div class="field">
+            <div class="control">
+              <button class="button is-danger">
+                Post to Blog
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
 
-    {{{body}}}
 
-    </section>
+
+
+
+
+
 
 
     <script src="./js/script.js" type="text/javascript"></script>
